--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -202,6 +202,17 @@
   volume: "40"
   issn: "0018-9286"
 
+- author: "Biswas, Indranil and D'Mello, Shane and Mukherjee, Ritwik and Pingali, Vamsi P."
+  fjournal: "Journal of Singularities"
+  journal: "J. Singul."
+  mrnumber: "3800492"
+  pages: "91-107"
+  year: 2018
+  title: "Rational cuspidal curves on del-Pezzo surfaces"
+  mrclass: "14N35 (14H10 14J26)"
+  volume: "17"
+  issn: "1949-2006"
+
 - number: "6"
   author: "Sachdev, P. L. and Nair, K. R. C. and Tikekar, V. G."
   fjournal: "Journal of Mathematical Physics"
@@ -355,6 +366,20 @@
   mrclass: "35L65 (35Q53)"
   volume: "52"
   issn: "0033-569X"
+
+- number: "9"
+  author: "Chandel, Vikramjeet Singh"
+  fjournal: "Complex Variables and Elliptic Equations. An International Journal"
+  url: "httpsdoi.org10.108017476933.2017.1370461"
+  journal: "Complex Var. Elliptic Equ."
+  mrnumber: "3818448"
+  pages: "1341-1352"
+  year: 2018
+  title: "The three-point Pick-Nevanlinna interpolation problem on the polydisc"
+  doi: "10.108017476933.2017.1370461"
+  mrclass: "32A17 (30E05 30J10 32F45 46E20)"
+  volume: "63"
+  issn: "1747-6933"
 
 - number: "5"
   author: "Banerjee, Abhishek"
@@ -1542,6 +1567,18 @@
   volume: "338"
   issn: "0012-365X"
 
+- number: "1"
+  author: "Ayyer, Arvind and Finn, Caley and Roy, Dipankar"
+  fjournal: "Physical Review E"
+  journal: "Phys. Rev. E"
+  mrnumber: "3835489"
+  pages: "012151, 10"
+  year: 2018
+  title: "Matrix product solution of a left-permeable two-species asymmetric exclusion process"
+  mrclass: "82C20"
+  volume: "97"
+  issn: "2470-0045"
+
 - number: "11"
   author: "Bhat, G. S. and Narasimha, R. and Wiggins, S."
   fjournal: "Physics of Fluids A. Fluid Dynamics"
@@ -2395,6 +2432,20 @@
   mrclass: "42B10"
   volume: "119"
   issn: "0021-7670"
+
+- number: "10"
+  author: "Pingali, Vamsi Pritham"
+  fjournal: "Transactions of the American Mathematical Society"
+  url: "httpsdoi.org10.1090tran7416"
+  journal: "Trans. Amer. Math. Soc."
+  mrnumber: "3841840"
+  pages: "6995-7010"
+  year: 2018
+  title: "A note on higher extremal metrics"
+  doi: "10.1090tran7416"
+  mrclass: "53C25 (53C55)"
+  volume: "370"
+  issn: "0002-9947"
 
 - number: "27"
   author: "Ali, S. Twareque and Bhattacharyya, T. and Roy, S. S."
@@ -3434,6 +3485,20 @@
   volume: "38"
   issn: "0246-0211"
 
+- number: "6"
+  author: "Banerjee, Abhishek"
+  fjournal: "Communications in Contemporary Mathematics"
+  url: "httpsdoi.org10.1142S0219199717500717"
+  journal: "Commun. Contemp. Math."
+  mrnumber: "3848067"
+  pages: "1750071, 27"
+  year: 2018
+  title: "On Auslander's formula and cohereditary torsion pairs"
+  doi: "10.1142S0219199717500717"
+  mrclass: "18E30 (18E40)"
+  volume: "20"
+  issn: "0219-1997"
+
 - number: "1"
   author: "Patil, D. P. and Tamone, G."
   fjournal: "The Rocky Mountain Journal of Mathematics"
@@ -3448,6 +3513,18 @@
   mrclass: "13D40"
   volume: "34"
   issn: "0035-7596"
+
+- number: "2"
+  author: "Ayyer, Arvind and Ramassamy, Sanjay"
+  fjournal: "ALEA. Latin American Journal of Probability and Mathematical Statistics"
+  journal: "ALEA Lat. Am. J. Probab. Math. Stat."
+  mrnumber: "3840737"
+  pages: "755-774"
+  year: 2018
+  title: "The Hilbert-Galton board"
+  mrclass: "60J27 (60C05 82C23)"
+  volume: "15"
+  issn: "1980-0436"
 
 - number: "5"
   author: "Palaniappan, D."
@@ -4322,6 +4399,18 @@
   volume: "5878"
 
 - number: "1"
+  author: "Sain, Debmalya and Paul, Kallol and Mal, Arpita"
+  fjournal: "Journal of Convex Analysis"
+  journal: "J. Convex Anal."
+  mrnumber: "3847228"
+  pages: "341-351"
+  year: 2019
+  title: "On approximate Birkhoff-James orthogonality and normal cones in a normed space"
+  mrclass: "49J53 (46B20 52A10)"
+  volume: "26"
+  issn: "0944-6532"
+
+- number: "1"
   author: "Pollicott, Mark and Sridharan, Shrihari"
   fjournal: "Journal of Dynamical Systems and Geometric Theories"
   url: "httpdx.doi.org10.10801726037X.2007.10698526"
@@ -4417,6 +4506,20 @@
   mrclass: "44A20 (76B15)"
   volume: "116"
   issn: "0377-0427"
+
+- author: "Banerjee, Abhishek"
+  fjournal: "Journal of Geometry and Physics"
+  url: "httpsdoi.org10.1016j.geomphys.2018.04.008"
+  journal: "J. Geom. Phys."
+  mrnumber: "3815225"
+  pages: "23-40"
+  year: 2018
+  mrreviewer: "Gabriella B\\\"ohm"
+  title: "Modular Hecke algebras over M\\\"obius categories"
+  doi: "10.1016j.geomphys.2018.04.008"
+  mrclass: "16T05 (11F03)"
+  volume: "131"
+  issn: "0393-0440"
 
 - author: "Abraham, David J. and Kavitha, Telikepalli"
   series: "Lecture Notes in Comput. Sci."
@@ -5062,6 +5165,20 @@
   volume: "186"
   issn: "0096-3003"
 
+- number: "12"
+  author: "Datta, Basudeb and Maity, Dipendu"
+  fjournal: "Discrete Mathematics"
+  url: "httpsdoi.org10.1016j.disc.2018.08.016"
+  journal: "Discrete Math."
+  mrnumber: "3862628"
+  pages: "3296-3309"
+  year: 2018
+  title: "Semi-equivelar maps on the torus and the Klein bottle are Archimedean"
+  doi: "10.1016j.disc.2018.08.016"
+  mrclass: "52C20 (57N05)"
+  volume: "341"
+  issn: "0012-365X"
+
 - author: "Douglas, Ronald G. and Misra, Gadadhar and Sarkar, Jaydeb"
   fjournal: "Israel Journal of Mathematics"
   url: "httpdx.doi.org10.1007s11856-011-0166-6"
@@ -5272,6 +5389,21 @@
   title: "An $\\O(mn)$ Gomory-Hu tree construction algorithm for unweighted graphs"
   doi: "10.11451250790.1250879"
   mrclass: "90C27 (05C40 05C70 05C85)"
+
+- number: "5"
+  author: "Pritham Pingali, Vamsi"
+  fjournal: "International Journal of Mathematics"
+  url: "httpsdoi.org10.1142S0129167X18500416"
+  journal: "Internat. J. Math."
+  mrnumber: "3808055"
+  pages: "1850041, 8"
+  year: 2018
+  mrreviewer: "Chi Li"
+  title: "Existence of coupled K\\\"ahler-Einstein metrics using the continuity method"
+  doi: "10.1142S0129167X18500416"
+  mrclass: "32Q20 (53C25)"
+  volume: "29"
+  issn: "0129-167X"
 
 - number: "4"
   author: "Verma, Kaushal"
@@ -5903,6 +6035,20 @@
   booktitle: "Special functions and differential equations (Madras, 1997)"
   title: "On three unified approaches in problems of scattering of water waves by vertical barriers"
   mrclass: "76B15 (45Exx)"
+
+- number: "8"
+  author: "Manikandan, K. and Vishnu Priya, N. and Senthilvelan, M. and Sankaranarayanan, R."
+  fjournal: "Chaos. An Interdisciplinary Journal of Nonlinear Science"
+  url: "httpsdoi.org10.10631.5039901"
+  journal: "Chaos"
+  mrnumber: "3836111"
+  pages: "083103, 12"
+  year: 2018
+  title: "Deformation of dark solitons in a $\\Cal{PT}$-invariant variable coefficients nonlocal nonlinear Schr\\\"odinger equation"
+  doi: "10.10631.5039901"
+  mrclass: "82C10"
+  volume: "28"
+  issn: "1054-1500"
 
 - number: "1"
   author: "Dharmatti, S. and Ramaswamy, M."
@@ -7242,6 +7388,20 @@
   volume: "274"
   issn: "0022-1236"
 
+- number: "4"
+  author: "Chatterjee, Esha and Hassan, Sk. Sarif"
+  fjournal: "Discrete and Continuous Dynamical Systems. Series A"
+  url: "httpsdoi.org10.3934dcds.2018070"
+  journal: "Discrete Contin. Dyn. Syst."
+  mrnumber: "3809012"
+  pages: "1707-1718"
+  year: 2018
+  title: "On the asymptotic character of a generalized rational difference equation"
+  doi: "10.3934dcds.2018070"
+  mrclass: "39A10 (39A12)"
+  volume: "38"
+  issn: "1078-0947"
+
 - number: "8"
   author: "Nambiar, K. K. and Tikekar, V. G."
   fjournal: "Indian Institute of Science. Journal"
@@ -7295,6 +7455,21 @@
   title: "Dilation of contractive tuples a survey"
   mrclass: "47A20 (46L99 47A13 47A45 47L99)"
   volume: "40"
+
+- number: "2"
+  author: "Ciaurri, \\'Oscar and Roncal, Luz and Thangavelu, Sundaram"
+  fjournal: "Proceedings of the Edinburgh Mathematical Society. Series II"
+  url: "httpsdoi.org10.1017s0013091517000311"
+  journal: "Proc. Edinb. Math. Soc. (2)"
+  mrnumber: "3826476"
+  pages: "513-544"
+  year: 2018
+  mrreviewer: "Dinesh Kumar"
+  title: "Hardy-type inequalities for fractional powers of the Dunkl-Hermite operator"
+  doi: "10.1017s0013091517000311"
+  mrclass: "26D10 (26A33 33C45 35A23 42C10 43A90)"
+  volume: "61"
+  issn: "0013-0915"
 
 - number: "6, part A"
   author: "Janaki, T. M. and Rangarajan, Govindan and Habib, Salman and Ryne, Robert D."
@@ -7965,6 +8140,19 @@
   mrclass: "76N15 (35L60 35L65 35L67 65M08)"
   volume: "4"
 
+- author: "B\\\"ocherer, Siegfried and Das, Soumya"
+  fjournal: "Journal f\\\"ur die Reine und Angewandte Mathematik. Crelle's Journal"
+  url: "httpsdoi.org10.1515crelle-2015-0075"
+  journal: "J. Reine Angew. Math."
+  mrnumber: "3836146"
+  pages: "161-178"
+  year: 2018
+  title: "Cuspidality and the growth of Fourier coefficients of modular forms"
+  doi: "10.1515crelle-2015-0075"
+  mrclass: "11F30"
+  volume: "741"
+  issn: "0075-4102"
+
 - number: "2"
   author: "Kumar, V. V. K. Srinivas and Kumar, B. V. Rathish and Das, P. C."
   fjournal: "Journal of Computational and Applied Mathematics"
@@ -8473,6 +8661,20 @@
   volume: "29"
   issn: "1598-5857"
 
+- number: "3"
+  author: "Das, Soumya and Khan, Rizwanur"
+  fjournal: "The Quarterly Journal of Mathematics"
+  url: "httpsdoi.org10.1093qmathhay012"
+  journal: "Q. J. Math."
+  mrnumber: "3859224"
+  pages: "1063-1087"
+  year: 2018
+  title: "The third moment of symmetric square $L$-functions"
+  doi: "10.1093qmathhay012"
+  mrclass: "11M06"
+  volume: "69"
+  issn: "0033-5606"
+
 - number: "1"
   author: "Narayana, Darapaneni and Rao, T. S. S. R. K."
   fjournal: "Colloquium Mathematicum"
@@ -8655,6 +8857,20 @@
   issn: "0026-9255"
 
 - number: "3"
+  author: "Reza, Md. Ramiz"
+  fjournal: "Indiana University Mathematics Journal"
+  url: "httpsdoi.org10.1512iumj.2018.67.7320"
+  journal: "Indiana Univ. Math. J."
+  mrnumber: "3820247"
+  pages: "1255-1279"
+  year: 2018
+  title: "Curvature inequalities for operators in the Cowen-Douglas class of a planar domain"
+  doi: "10.1512iumj.2018.67.7320"
+  mrclass: "30C"
+  volume: "67"
+  issn: "0022-2518"
+
+- number: "3"
   author: "Biswas, Shibananda and Misra, Gadadhar"
   fjournal: "Indiana University Mathematics Journal"
   url: "httpdx.doi.org10.1512iumj.2012.61.4633"
@@ -8779,6 +8995,21 @@
   mrclass: "60C05"
   volume: "31"
   issn: "0256-2499"
+
+- number: "1"
+  author: "Pal, Ratna and Verma, Kaushal"
+  fjournal: "Annales Polonici Mathematici"
+  url: "httpsdoi.org10.4064ap170928-2-4"
+  journal: "Ann. Polon. Math."
+  mrnumber: "3816172"
+  pages: "45-71"
+  year: 2018
+  mrreviewer: "Feng Rong"
+  title: "Ergodic properties of families of H\\'enon maps"
+  doi: "10.4064ap170928-2-4"
+  mrclass: "37F45"
+  volume: "121"
+  issn: "0066-2216"
 
 - number: "15"
   author: "Rangarajan, Govindan"
@@ -9191,6 +9422,20 @@
   mrclass: "32D10 (30B40 32D15)"
   volume: "60"
   issn: "0026-2285"
+
+- number: "3"
+  author: "Borah, Diganta and Haridas, Pranav and Verma, Kaushal"
+  fjournal: "Analysis and Mathematical Physics"
+  url: "httpsdoi.org10.1007s13324-017-0177-5"
+  journal: "Anal. Math. Phys."
+  mrnumber: "3842204"
+  pages: "383-414"
+  year: 2018
+  title: "Comments on the Green's function of a planar domain"
+  doi: "10.1007s13324-017-0177-5"
+  mrclass: "30C40 (30F45 31A15 31C15 32F45 32Q05 32Q15)"
+  volume: "8"
+  issn: "1664-2368"
 
 - number: "4"
   author: "Vanaja, V. and Sachdev, P. L."
@@ -10932,6 +11177,19 @@
   volume: "41"
   issn: "0020-7225"
 
+- author: "B\\\"ocherer, Siegfried and Das, Soumya"
+  fjournal: "Advances in Mathematics"
+  url: "httpsdoi.org10.1016j.aim.2018.07.033"
+  journal: "Adv. Math."
+  mrnumber: "3846155"
+  pages: "335-376"
+  year: 2018
+  title: "Petersson norms of not necessarily cuspidal Jacobi modular forms and applications"
+  doi: "10.1016j.aim.2018.07.033"
+  mrclass: "11F50 (11F46)"
+  volume: "336"
+  issn: "0001-8708"
+
 - number: "4"
   author: "Datta, Basudeb and Murai, Satoshi"
   fjournal: "Electronic Journal of Combinatorics"
@@ -11070,6 +11328,20 @@
   mrclass: "78A45"
   volume: "16"
   issn: "0019-5588"
+
+- number: "2"
+  author: "Ghara, Soumitra and Kumar, Surjit"
+  fjournal: "Journal of Mathematical Analysis and Applications"
+  url: "httpsdoi.org10.1016j.jmaa.2018.09.048"
+  journal: "J. Math. Anal. Appl."
+  mrnumber: "3860458"
+  pages: "1015-1027"
+  year: 2019
+  title: "On the sum of two subnormal kernels"
+  doi: "10.1016j.jmaa.2018.09.048"
+  mrclass: "47B15"
+  volume: "469"
+  issn: "0022-247X"
 
 - author: "Gupta, S. C."
   mrnumber: "3726880"
@@ -11642,6 +11914,20 @@
   mrclass: "81C40 (81D05 81G30 81G50 81M05)"
   volume: "28"
   issn: "0556-2821"
+
+- number: "2"
+  author: "Basu, Arnab and Ghosh, Mrinal K."
+  fjournal: "Mathematics of Operations Research"
+  url: "httpsdoi.org10.1287moor.2017.0870"
+  journal: "Math. Oper. Res."
+  mrnumber: "3801104"
+  pages: "516-532"
+  year: 2018
+  title: "Nonzero-sum risk-sensitive stochastic games on a countable state space"
+  doi: "10.1287moor.2017.0870"
+  mrclass: "91A15"
+  volume: "43"
+  issn: "0364-765X"
 
 - number: "1"
   author: "Biswas, Indranil and Ravindra, G. V."
@@ -12492,6 +12778,19 @@
   volume: "25"
   issn: "0129-167X"
 
+- author: "Anamby, Pramath and Das, Soumya"
+  fjournal: "Journal of Number Theory"
+  url: "httpsdoi.org10.1016j.jnt.2018.03.011"
+  journal: "J. Number Theory"
+  mrnumber: "3825472"
+  pages: "289-304"
+  year: 2018
+  title: "Bounds for the Petersson norms of the pullbacks of Saito-Kurokawa lifts"
+  doi: "10.1016j.jnt.2018.03.011"
+  mrclass: "11F11 (11F46 11F66)"
+  volume: "191"
+  issn: "0022-314X"
+
 - number: "4"
   author: "Basu, Arnab and Ghosh, Mrinal K."
   fjournal: "Stochastic Analysis and Applications"
@@ -12565,6 +12864,19 @@
   mrclass: "76B07 (35Q35)"
   volume: "56"
   issn: "1446-1811"
+
+- author: "Banerjee, Abhishek"
+  fjournal: "Journal of Algebra"
+  url: "httpsdoi.org10.1016j.jalgebra.2018.04.022"
+  journal: "J. Algebra"
+  mrnumber: "3807052"
+  pages: "362-399"
+  year: 2018
+  title: "Completions of monoid objects and descent results"
+  doi: "10.1016j.jalgebra.2018.04.022"
+  mrclass: "14A20 (13J10 14A15)"
+  volume: "507"
+  issn: "0021-8693"
 
 - number: "4"
   author: "Nandakumaran, A. K."
