--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -22,6 +22,10 @@
 - name	:	Dipendu Maity (Ph.D., IIT Patna)
   user-id	:	dipendumaity
 
+- name	:	Gouranga Mallik (Ph.D., IIT Bombay)
+  user-id	:	gourangam
+
+
 - name	:	Kaustubh Manchanda (Ph.D., JNU)
   user-id	:	kaustubhm
 
