UpdatedVed's office number.Need Abhishek's new no.

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -12,7 +12,7 @@
   research-areas: Algebraic geometry, noncommutative geometry
   phd: Johns Hopkins
   phone-ext: 3326
-  office: X05
+  office: 
   website: https://sites.google.com/site/abhishekb1313/
 
 - name: Gautam Bharali
@@ -46,7 +46,7 @@
   research-areas: Geometric analysis and Complex geometry.
   phd: Rutgers
   phone-ext: xxxx
-  office: L14
+  office: X05
   
 - name: Basudeb Datta
   user-id: dattab
