--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -4,6 +4,7 @@
 - name: Milind Hegde
   year: '2016'
   degree: Bachelor of Science (Research)
+  present: "Graduate student at U.C. Berkeley"
 - name: S Hamilton Samraj
   year: '2016'
   degree: Bachelor of Science (Research)
