--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -101,8 +101,8 @@
   position: Assistant Professor
   phd: Chicago
   research-areas: Positivity and analysis; representation theory of Lie algebras and algebras with triangular decompositions; combinatorics and discrete mathematics (with connections to the two research areas above)
-  phone-ext: 3214
-  office: R23
+  phone-ext: 2514
+  office: X26
 
 - name: Manjunath Krishnapur
   user-id: manju
