--- a/_data/fac-alumni.yaml
+++ b/_data/fac-alumni.yaml
@@ -8,7 +8,7 @@
 - name: Chanchal Uberoi
 - name: R K Bhatnagar
 - name: P L Sachdev
-- name: M N Mathur (was he a lecturer or only Research assistant, possible)
+- name: M N Mathur
 - name: Girishwar Nath
 - name: Phoolan Prasad
 - name: Renuka Ravindran
