--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -59,7 +59,7 @@
 - name: Siddhartha Gadgil
   user-id: gadgil
   position: Professor
-  research-areas: Geometric topology
+  research-areas: Geometric topology, Automated Theorem Proving
   phd: Caltech
   phone-ext: 3209
   office: N15
