--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ collections:
     output: true
     permalink: /all-courses/:title
 
-exclude: ["sources/", "purged/"]
+exclude: ["sources/", "purged/", "out/"]
 
 defaults:
   - scope:
