--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -10,8 +10,8 @@
 - name	:	Asha Kisan Dond (Ph.D., IIT Bombay)
   user-id	:	ashadond
 
-- name: Qaiser Jahan (Ph.D., ISI)
-  user-id: qaiserjahan
+- name: Anupam Gumber (Ph.D., IIT Indore)
+  user-id: anupamgumber
 
 - name : Abhash Kumar Jha (Ph.D., NISER)
   user-id : abhashjha
