--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -13,6 +13,9 @@
 - name: Anupam Gumber (Ph.D., IIT Indore)
   user-id: anupamgumber
 
+- name: Sumana Hatui (Ph.D., HRI, Allahabad)
+  user-id: sumanahatui
+
 - name : Abhash Kumar Jha (Ph.D., NISER)
   user-id : abhashjha
 
