--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -81,8 +81,8 @@ jan2020:
   - name: Geometric Analysis
     code: MA 339
     instructor: Vamsi Pingali
-  - name: Brownian Motion
-    code: MA 367
+  - name: Topics in Probability and Stochastic Processes
+    code: MA 368
     instructor: Manjunath Krishnapur
   - name: Topics in Representation Theory
     code: MA 387
